fixing layout and adding expand collapse all toggle to list

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,16 @@ body {
   padding: 0px;
 }
 
-.min-width-500 {
-  min-width: 500px;
+.min-width-300 {
+  min-width: 300px;
+}
+
+.min-width-200 {
+  min-width: 200px;
+}
+
+.min-width-150 {
+  min-width: 150px;
 }
 
 .max-width-700 {
